// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanelContext SidePanelProvider render should render the non-resized container 1`] = `
.circuit-0 {
  width: 100%;
  -webkit-transition: width 200ms ease-in-out;
  transition: width 200ms ease-in-out;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button>
        Open panel
      </button>
    </div>
  </div>
</body>
`;

exports[`SidePanelContext SidePanelProvider render should render the side panel and the resized container 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  width: 100%;
  -webkit-transition: width 200ms ease-in-out;
  transition: width 200ms ease-in-out;
  width: calc(100% - 400px);
}

.circuit-1 {
  height: 100%;
}

.circuit-2 {
  height: 100%;
  outline: none;
  background-color: var(--cui-bg-normal);
  box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-transition: -webkit-transform 200ms ease-in-out;
  transition: transform 200ms ease-in-out;
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 0;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  width: 100%;
  height: 100%;
}

@media (min-width: 768px) {
  .circuit-3 {
    padding-left: 0;
  }
}

.circuit-4 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  z-index: 600;
}

@media (min-width: 768px) {
  .circuit-4 {
    box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  }
}

.circuit-5 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 1.125rem;
  line-height: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  margin-left: 56px;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-normal);
  border-color: var(--cui-border-normal);
  color: var(--cui-fg-normal);
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 4px;
  border-color: transparent!important;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  width: 100%;
  max-width: 480px;
  padding: 0 16px;
}

@media (min-width: 768px) {
  .circuit-11 {
    padding: 0 24px;
  }
}

<body
  class="ReactModal__SidePanel__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div>
    <div
      class="circuit-0"
    >
      <button>
        Open panel
      </button>
    </div>
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal__SidePanel"
  >
    <div
      class="ReactModal__Overlay circuit-1"
    >
      <div
        aria-labelledby="side-panel-header_2"
        aria-modal="true"
        class="circuit-2"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-3"
        >
          <div
            class="circuit-4"
          >
            <h2
              class="circuit-5"
              id="side-panel-header_2"
            >
              Side panel title
            </h2>
            <button
              class="circuit-6"
              title="Close"
              type="button"
            >
              <span
                class="circuit-7"
              >
                <span
                  class="circuit-8"
                />
              </span>
              <span
                class="circuit-9"
              >
                <svg
                  fill="none"
                  height="24"
                  role="presentation"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="circuit-8"
                >
                  Close
                </span>
              </span>
            </button>
          </div>
          <div
            class="circuit-11"
          >
            <p
              data-testid="children"
            >
              Side panel content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePanelContext SidePanelProvider render should render the side panel on mobile resolutions 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  width: 100%;
  -webkit-transition: width 240ms ease-in-out;
  transition: width 240ms ease-in-out;
}

.circuit-1 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  -webkit-transition: background-color 240ms ease-in-out;
  transition: background-color 240ms ease-in-out;
  background-color: rgba(0, 0, 0, 0);
}

.circuit-2 {
  height: 100%;
  outline: none;
  background-color: var(--cui-bg-normal);
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 240ms ease-in-out;
  transition: transform 240ms ease-in-out;
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 0;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  width: 100%;
  height: 100%;
}

@media (min-width: 768px) {
  .circuit-3 {
    padding-left: 0;
  }
}

.circuit-4 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  z-index: 600;
}

@media (min-width: 768px) {
  .circuit-4 {
    box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  }
}

.circuit-5 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 1.125rem;
  line-height: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  margin-left: 56px;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-normal);
  border-color: var(--cui-border-normal);
  color: var(--cui-fg-normal);
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 4px;
  border-color: transparent!important;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  width: 100%;
  max-width: 480px;
  padding: 0 16px;
}

@media (min-width: 768px) {
  .circuit-11 {
    padding: 0 24px;
  }
}

<body
  class="ReactModal__SidePanel__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal__SidePanel"
  />
  <div>
    <div
      class="circuit-0"
    >
      <button>
        Open panel
      </button>
    </div>
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal__SidePanel"
  >
    <div
      class="circuit-1"
    >
      <div
        aria-labelledby="side-panel-header_4"
        aria-modal="true"
        class="circuit-2"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-3"
        >
          <div
            class="circuit-4"
          >
            <h2
              class="circuit-5"
              id="side-panel-header_4"
            >
              Side panel title
            </h2>
            <button
              class="circuit-6"
              title="Close"
              type="button"
            >
              <span
                class="circuit-7"
              >
                <span
                  class="circuit-8"
                />
              </span>
              <span
                class="circuit-9"
              >
                <svg
                  fill="none"
                  height="24"
                  role="presentation"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="circuit-8"
                >
                  Close
                </span>
              </span>
            </button>
          </div>
          <div
            class="circuit-11"
          >
            <p
              data-testid="children"
            >
              Side panel content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePanelContext SidePanelProvider render should render the side panel with offset for the top navigation 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  width: 100%;
  -webkit-transition: width 200ms ease-in-out;
  transition: width 200ms ease-in-out;
  width: calc(100% - 400px);
}

.circuit-1 {
  height: 100%;
}

.circuit-2 {
  height: 100%;
  outline: none;
  background-color: var(--cui-bg-normal);
  box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-transition: -webkit-transform 200ms ease-in-out;
  transition: transform 200ms ease-in-out;
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 0;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  width: 100%;
  height: 100%;
  padding-top: 0;
}

@media (min-width: 768px) {
  .circuit-3 {
    padding-left: 0;
  }
}

.circuit-4 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  z-index: 600;
}

@media (min-width: 768px) {
  .circuit-4 {
    box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  }
}

.circuit-5 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 1.125rem;
  line-height: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  margin-left: 56px;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-normal);
  border-color: var(--cui-border-normal);
  color: var(--cui-fg-normal);
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 4px;
  border-color: transparent!important;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  width: 100%;
  max-width: 480px;
  padding: 0 16px;
}

@media (min-width: 768px) {
  .circuit-11 {
    padding: 0 24px;
  }
}

<body
  class="ReactModal__SidePanel__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal__SidePanel"
  />
  <div
    class="ReactModalPortal__SidePanel"
  />
  <div>
    <div
      class="circuit-0"
    >
      <button>
        Open panel
      </button>
    </div>
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal__SidePanel"
  >
    <div
      class="ReactModal__Overlay circuit-1"
    >
      <div
        aria-labelledby="side-panel-header_6"
        aria-modal="true"
        class="circuit-2"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-3"
        >
          <div
            class="circuit-4"
          >
            <h2
              class="circuit-5"
              id="side-panel-header_6"
            >
              Side panel title
            </h2>
            <button
              class="circuit-6"
              title="Close"
              type="button"
            >
              <span
                class="circuit-7"
              >
                <span
                  class="circuit-8"
                />
              </span>
              <span
                class="circuit-9"
              >
                <svg
                  fill="none"
                  height="24"
                  role="presentation"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="circuit-8"
                >
                  Close
                </span>
              </span>
            </button>
          </div>
          <div
            class="circuit-11"
          >
            <p
              data-testid="children"
            >
              Side panel content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
